--- a/index.css
+++ b/index.css
@@ -1,3 +1,73 @@
 #heading {
     color: brown;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo {
+    width: 200px;
+    height: 200px;
+}
+
+.navitems {
+    padding: 50px 10px;
+}
+
+.navitems > ul {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    font-size: 25px ;
+}
+.navitems > ul >li {
+    padding: 10px;
+    list-style-type: none;
+}
+
+.navitems > ul >li:hover {
+cursor: pointer;
+}
+
+.search {
+    padding: 10px;
+}
+.ResCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+    margin: 10px;
+    background-color: #f0f0f0;
+    width :300px;
+    height: auto;
+}
+
+.ResCard:hover{
+    cursor:  pointer;
+    border: 1px solid black;
+}
+
+.Restname{
+    text-align: center;
+    font-size: 20px;
+
+}
+
+.RestImage{
+    width: 200px;
+    height: 200px;
+}
+
+.RestroContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.Cuisines{
+   text-align: center;
+}
